<resources>
    <string name="view_rates">view rates</string>
    <string name="general_no_rates">No Rates</string>
    <string name="general_not_available">Not Available</string>
    <string name="general_sold_out">Sold Out</string>
    <string name="general_preferred">Preferred</string>
    <string name="general_label_miles">miles</string>
    <string name="general_number_of_miles">%%0!number of miles%% miles</string>
    <string name="general_label_km">km</string>
    <string name="general_number_of_km">%%0!number of kilometeres%% km</string>
    <string name="general_filter">Filter</string>
    <string name="general_sort">Sort</string>
    <string name="general_credit_card">Credit Card</string>
    <string name="general_select_card">Select credit card</string>
    <string name="general_credit_cards_not_available">Credit cards not available</string>
    <string name="general_summary">Summary</string>
    <string name="general_total">Total</string>
    <string name="general_violation">Violation</string>
    <string name="general_violation_description">Violation Description</string>
    <string name="general_reason">Reason</string>
    <string name="general_select_reason">Select a reason</string>
    <string name="general_violaiton_reasons_not_available">Violation reasons not available</string>
    <string name="general_justification">Justification</string>
    <string name="general_enter_justification">Enter a justification</string>
    <string name="general_required_fields">Required fields</string>
    <string name="general_select_one_of_the_below">Select one of the below</string>
    <string name="general_speak_now">Speak now</string>
    <string name="voice_book_hint">Press the microphone to start</string>
    <string name="voice_hotel_book_hint_primary">What hotel can I find for you?</string>
    <string name="voice_hotel_book_hint_secondary">For example, say: \"Find a hotel near the Statue of Liberty for next week.\"</string>
    <string name="app_name">ConcurPlatformUITravel</string>
    <string name="hotel_search_progress_message">Searching for hotels</string>
    <string name="hotel_details_progress_message">Retrieving hotel details</string>
    <string name="hotel_rates_progress_message">Searching for rates</string>
    <string name="hotel_search_progress_no_hotels">No Hotels Found</string>
    <string name="hotel_search_travel_header">HOTELS NEAR %%0%%</string>
    <string name="hotel_search_travel_header_location_you">YOU</string>
    <string name="dlg_travel_hotel_search_failed_title">Hotel Search Failed</string>
    <string name="dlg_travel_hotel_search_failed_general_msg">Could not search hotels, please try again.</string>
    <string name="current_location">Destination</string>
    <string name="search">Search</string>
    <string name="action_item_maps">Maps</string>
    <string name="voice_search">Voice Search</string>
    <string name="map_unavailable">Map Unavailable</string>
    <string name="map_loading">Could not show maps now, search in-progress.</string>
    <string name="no_rooms">No Rooms Available</string>
    <string name="hotel_search_no_hotels_found">We could not find any hotels with the given search criteria. Please try again with different criteria.</string>
    <string name="hotel_search_resutls_title">Hotels</string>
    <string name="hotel_search_resutls_size">%%0!number of results%% results</string>
    <string name="hotel_search">Search Hotels</string>
    <string name="hotel_voice_search_criteria">Searching for hotels near %%0%% from %%1%% to %%2%%.</string>
    <string name="voice_search_canceled">Search canceled.</string>
    <string name="hotel_preferred">Preferred</string>
    <string name="hotel_chain_less_preferred">Chain Less Preferred</string>
    <string name="hotel_chain_preferred">Chain Preferred</string>
    <string name="hotel_chain_most_preferred">Chain Most Preferred</string>
    <string name="hotel_property_less_preferred">Property Less Preferred</string>
    <string name="hotel_property_preferred">Property Preferred</string>
    <string name="hotel_property_most_preferred">Property Most Preferred</string>
    <string name="hotel_suggestion_personal_history">Suggested based on past stay</string>
    <string name="hotel_suggestion_company_favorite">Suggested based on co-worker</string>
    <string name="hotel_suggestion_algorithm">Suggested based on popularity</string>
    <string name="hotel_search_results_sort_option_distance">Distance</string>
    <string name="hotel_search_results_sort_option_preferred">Preferred</string>
    <string name="hotel_search_results_sort_option_price">Price</string>
    <string name="hotel_search_results_sort_option_rating">Rating</string>
    <string name="hotel_search_results_sort_option_suggested">Suggested</string>
    <string name="hotel_search_results_sorted_by_distance">results sorted by distance</string>
    <string name="hotel_search_results_sorted_by_preference">results sorted by preferred</string>
    <string name="hotel_search_results_sorted_by_price">results sorted by price</string>
    <string name="hotel_search_results_sorted_by_rating">results sorted by rating</string>
    <string name="hotel_search_results_sorted_by_suggestion">results sorted by suggested</string>
    <string name="hotel_search_results_filter_star_rating_label">STAR RATING</string>
    <string name="hotel_search_results_filter_all">ALL</string>
    <string name="hotel_search_results_filter_star_rating_3">3+</string>
    <string name="hotel_search_results_filter_star_rating_4">4+</string>
    <string name="hotel_search_results_filter_star_rating_5">5</string>
    <string name="hotel_search_results_filter_distance_label">DISTANCE</string>
    <string name="hotel_search_results_filter_distance_5miles">5\nmiles</string>
    <string name="hotel_search_results_filter_distance_15miles">15\nmiles</string>
    <string name="hotel_search_results_filter_distance_25miles">25\nmiles</string>
    <string name="hotel_search_results_filter_distance_5km">5\nkm</string>
    <string name="hotel_search_results_filter_distance_15km">15\nkm</string>
    <string name="hotel_search_results_filter_distance_25km">25\nkm</string>
    <string name="hotel_search_results_filter_name_containing_label">WITH NAME CONTAINING</string>
    <string name="hotel_search_results_filter_name_containing_hint">Search by hotel name i.e. Westin</string>
    <string name="hotel_tab_details">DETAILS</string>
    <string name="hotel_tab_rooms">ROOMS</string>
    <string name="hotel_tab_images">PHOTOS</string>
    <string name="find_rooms_button">Find Rooms</string>
    <string name="hotel_citystatecountry">%%0!city%%, %%1!state%%, %%2!country%%, %%3!postcode%%</string>
    <string name="hotel_sell_options_retrieving">Retrieving sell options</string>
    <string name="hotel_reserve_this_room">Reserve Room</string>
    <string name="hotel_confirm_reserve_ok">RESERVE</string>
    <string name="hotel_confirm_reserve_cancel">CANCEL</string>
    <string name="hotel_reserve_num_of_night">%%0!1 night%% night</string>
    <string name="hotel_reserve_num_of_nights">%%0!number of nights%% nights</string>
    <string name="hotel_reserve_estimated_total">estimated total</string>
    <string name="hotel_reserve_cancel_policy">Cancellation Policy and Rate Details</string>
    <string name="hotel_reserve_cancel_policy_not_available">Cancellation policy not available</string>
    <string name="hotel_violation_reasons_not_available">Violation reasons not available</string>
    <string name="action_settings">Settings</string>
    <string name="no_photos">No Photos Available</string>
    <string name="no_network_connection_toast">No Network Connection</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="hotel_booking_failed">Room Confirm Failed.</string>
    <string name="hotel_booking_failed_title">Hotel Booking Failed</string>
    <string name="hotel_booking_success">Your room has been successfully reserved.</string>
    <string name="hotel_booking_retrieving">Reserving room...</string>
    <string name="hotel_overview">Overview</string>
    <string name="hotel_confirm_reserve_title">Confirm Reservation</string>
    <string name="hotel_confirm_reserve_msg">Are you sure you want to book this room?</string>
    <string name="hotel_booking_deposit_required">Deposit Required</string>
    <string name="hotel_dialog_deposit_required_title">Reservation Not Allowed</string>
    <string name="hotel_dialog_deposit_required_msg">Your travel policy does not allow booking this rate</string>
    <string name="dialog_ok">OK</string>
    <string name="dlg_travel_hotel_deposit_confirm_message">Are you sure you want to reserve this room?\nI understand that my credit card will be charged immediately and no cancellation will be possible later in the booking process. All or portions of the deposit will be forfeited upon cancellation.</string>
    <string name="hotel_price_hint">per night</string>
    <string name="hotel_out_of_policy">out of policy</string>
    <string name="book_missing_field_card_selection">Please select a credit card.</string>
    <string name="book_missing_field_violation_reason">Please select a violation reason.</string>
    <string name="book_missing_field_justification">Please specify justification.</string>
    <string name="loc_search_hint">Enter filter text</string>
    <string name="dlg_travel_retrieve_custom_fields_progress_message">Retrieving booking information fields...</string>
    <string name="dlg_travel_booking_info_title">Booking Info</string>
    <string name="dlg_travel_booking_info_message">The following booking fields have missing or invalid values.  Please review and provide the appropriate values.</string>
    <string name="travel_booking_info_unavailable_message">An error has occurred retrieving booking information fields.  Searches cannot be performed at this time.</string>
    <string name="dlg_list_search_selection_progress_message">Completing selection...</string>
    <string name="dlg_travel_retrieve_custom_fields_update_progress_message">Updating booking information fields...</string>
    <string name="field_name">Field Name</string>
    <string name="field_hint">Field Hint</string>
    <string name="book_missing_custom_fields">Please select required custom fields.</string>
    <string name="offline_header_text">Offline</string>
    <string name="dlg_system_unavailable_title">System Unavailable</string>
    <string name="dlg_system_unavailable_message">The service is unable to complete the operation at this time.  Please try again later, or contact your company administrator if this continues.</string>
    <string name="dlg_no_connectivity_title">Client Is Offline</string>
    <string name="dlg_no_connectivity_message">This operation is not supported in offline mode.  Please try again when data connectivity is available.</string>
    <string name="price_to_beat_label">PRICE-TO-BEAT</string>
    <string name="price_to_beat_range">%%0!minimum value of price to beat%% - %%1!maximum value of price to beat%%</string>
    <string name="travel_points_can_be_earned">+%%0!number of points can be earned for this booking%% pts</string>
    <string name="travel_points_can_be_earned_points">+%%0!number of points can be earned for this booking%% points</string>
    <string name="travel_points_can_be_redeemed">\-%%0!number of points can be redeemed for this booking%% pts</string>
    <string name="travel_points_earned_label">Points Earned</string>
    <string name="price_to_beat_ranges_header">Book under this price to help your company meet its travel savings goals.</string>
    <string name="price_to_beat_price_unavailable">Unavailable</string>
</resources>