<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="6dp"
            >
            <TextView
                android:id="@+id/invalid_field_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlg_travel_booking_info_message"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="6dp"
                />
            <TableLayout
                android:id="@+id/field_list_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1"
                android:shrinkColumns="0"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                >
                <TableRow
                    android:id="@+id/field_list_table_header"
                    >
                    <TextView
                        android:text="@string/field_name"
                        android:layout_marginRight="6dp"
                        android:textAppearance="@style/CustomFormFieldLabel"
                        />
                    <TextView
                        android:text="@string/field_hint"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:textAppearance="@style/CustomFormFieldLabel"
                        />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
